styled create Channel.html

--- a/slackbook_user/templates/base/create-channel.html
+++ b/slackbook_user/templates/base/create-channel.html
@@ -144,6 +144,7 @@
                     {% endif %}
                 {% else %}
                     <input class="btn btn-outline-success button" type="submit" value="Create Channel">
+                    <button type="submit" class="btn private-button" name="private" value="False">Create-Channel</button>
                 {% endif %}
             </form>    
         </div>
