--- a/templates/base-nav.html
+++ b/templates/base-nav.html
@@ -47,13 +47,9 @@
                       {% else %}
                         <img class="user-image" src="{{ request.user.avatar.url }}" alt="user-image">
                       {% endif %}
-                      <!-- <img class="user-image" src="{{ request.user.avatar.url }}" alt="user-image"> -->
                       </button>
                       <div class="dropdown-menu">
-                        <!-- <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a> -->
                         {% if user.is_authenticated %}
-                          
                           <li class="nav-item">
                               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                           </li>
@@ -68,13 +64,18 @@
 
                         <div class="dropdown-divider"></div>
                         {% if user.is_authenticated %}
-                          <a class="dropdown-item" href="{% url 'user-settings' %}">Settings</a>
+                        <li class="nav-item">
+                          <a class="nav-link" href="{% url 'user-settings' %}">Settings</a>
+                        </li>
                         {% endif %}
                         <li class="nav-item">
-                          <a class="nav-link" href="#">All Channels</a>
+                          <a class="nav-link" href="{% url 'account' request.user.id %}">My Account</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">All Categories</a>
+                          <a class="nav-link" href="{% url 'topics' %}">Categories and Channels</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="{% url 'recently-active' %}">Active Users</a>
                         </li>
                       </div>
                     </div>
