--- a/templates/base.html
+++ b/templates/base.html
@@ -48,13 +48,9 @@
                       {% else %}
                          <img class="user-image" src="{{ request.user.avatar.url }}" alt="user-image">
                       {% endif %}
-                      <!-- <img class="user-image" src="{{ request.user.avatar.url }}" alt="user-image"> -->
                       </button>
                       <div class="dropdown-menu">
-                        <!-- <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a> -->
                         {% if user.is_authenticated %}
-                          
                           <li class="nav-item">
                               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                           </li>
@@ -69,7 +65,9 @@
 
                         <div class="dropdown-divider"></div>
                         {% if user.is_authenticated %}
-                          <a class="dropdown-item" href="{% url 'user-settings' %}">Settings</a>
+                        <li class="nav-item">
+                          <a class="nav-link" href="{% url 'user-settings' %}">Settings</a>
+                        </li>
                         {% endif %}
                         <li class="nav-item">
                           <a class="nav-link" href="{% url 'account' request.user.id %}">My Account</a>
