add slub automation for created channels

--- a/slackbook_user/templates/base/create-channel.html
+++ b/slackbook_user/templates/base/create-channel.html
@@ -143,8 +143,8 @@
                         <button type="submit" class="btn private-button" name="private" value="False">Update Channel</button>
                     {% endif %}
                 {% else %}
-                    <input class="btn btn-outline-success button" type="submit" value="Create Channel">
-                    <button type="submit" class="btn private-button" name="private" value="False">Create-Channel</button>
+                    <!-- <input class="btn btn-outline-success button" type="submit" value="Create Channel"> -->
+                    <button type="submit" style="color: cyan;" class="btn btn-outline-success button" name="private" value="False">Create Channel</button>
                 {% endif %}
             </form>    
         </div>
