--- a/templates/base.html
+++ b/templates/base.html
@@ -91,11 +91,22 @@
         </div>
       </nav>
 <!-- -------------Content---------------- -->
-      <div class="base-conent">
-        {% block content %}
-    
-        {% endblock %}
-        </div>  
+    {% if messages %}
+    <div>
+    <strong>Messages:</strong>
+    <ul>
+        {% for message in messages %}
+        <li>{{message}}</li>
+        {% endfor %}
+    </ul>
+    </div>
+    {% endif %}
+
+    <div class="base-conent">
+    {% block content %}
+
+    {% endblock %}
+    </div>  
 <!-- -------------Footer---------------- --> 
 
 <footer class="footer">
@@ -105,5 +116,18 @@
     <a href="#">Social Media</a>
 </footer>
     
+    
 </body>
+<script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
+
+    <script text="javascript">
+    setTimeout(fade_out, 3000);
+    function fade_out() {
+        $(".messages").fadeOut().empty();
+    }
+    $(".post-form")[0].reset(); // this is to reset the form 
+    </script>
 </html>
