--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -13,7 +13,9 @@
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
+  <div class="signUp">
   {{ form.as_p }}
+  </div>
   <br>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
