--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- <script src="/static/js/tagsinut.js"></script> -->
     <title>SlackBook</title>
 </head>
 <!--------------------------------- Body -->
@@ -31,16 +30,12 @@
 
         
         <div class="col-md-4 collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="row no-gutters header-small">
-              <!-- <div class="col-md-6" > -->
+          <div class="row no-gutters header-user">
                 <div class="btn-group account-image">
-                  <!-- <div class="btn-group col-lg-1"> -->
                       <button type="button" class="btn btn-primary dropdown-toggle btn-outline-success button" data-toggle="dropdown" aria-expanded="false">
-                      <!-- <img src="/static/images/SlackBook-Logo.png" class="account-image" alt="account-image"> -->
                       {% if user.is_authenticated %}
                           {{ request.user.username }}
                       {% endif %}
-                      <!-- <i class="fas fa-user"></i> -->
                       {% if request.user.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
                         <img class="user-image" src="/static/images/avatar.png" alt="logo">              
                       {% elif not user.is_authenticated %}
@@ -68,21 +63,21 @@
                         <li class="nav-item">
                           <a class="nav-link" href="{% url 'user-settings' %}">Settings</a>
                         </li>
-                        {% endif %}
                         <li class="nav-item">
                           <a class="nav-link" href="{% url 'account' request.user.id %}">My Account</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="{% url 'topics' %}">Categories and Channels</a>
-                        </li>
+                            <a class="nav-link" href="{% url 'recently-active' %}">Active Users</a>
+                          </li>
+                        {% endif %}
                         <li class="nav-item">
-                          <a class="nav-link" href="{% url 'recently-active' %}">Active Users</a>
-                        </li>
+                          <a class="nav-link" href="{% url 'topics' %}">Categories and Channels</a>
+                        </li>    
                       </div>
                     </div>
         </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 collapse navbar-collapse" id="navbarSupportedContent">
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="s">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
