--- a/slackbook_user/templates/base/create-channel.html
+++ b/slackbook_user/templates/base/create-channel.html
@@ -120,8 +120,8 @@
     
                 <button class="btn btn-outline-success button"><a href="{{request.META.HTTP_REFERER}}">Cancel</a></button>
                 {% if 'add-members' in request.path %}
-                    <input class="btn btn-outline-success button" type="submit" value="Add Members">
-                    <button type="submit" class="btn private-button" name="private" value="True">Add-Members</button>
+                    <!-- <input class="btn btn-outline-success button" type="submit" value="Add Members"> -->
+                    <button type="submit" class="btn btn-outline-success button" name="private" value="True">Add Members</button>
                 {% elif 'update-channel' in request.path %}
                     {% if form.private.value == True %}
                         <button type="submit" class="btn private-button" name="private" value="True">Update Channel</button>
