--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,11 @@
 
 <body class="text-white bg-dark">
     <!------------------------------- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="row header no-gutters">
             <div class="col-md-4">
                 <!-- <a class="navbar-brand" href="/"><img class="brand" src="/static/images/SlackBook-Logo.png" alt="logo"></a> -->
-                <a class="navbar-brand" href="/"><img class="navbar-brand" src="{% static 'images/SlackBook-Logo.png' %}" alt="logo"></a>
+                <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
