--- a/slackbook_user/templates/base/account-index.html
+++ b/slackbook_user/templates/base/account-index.html
@@ -15,7 +15,8 @@
             <div class="channel-content channel-scroll">
                 <h4><a href="{% url 'channel' topic.id %}">{{topic.title}}</a></h4>
                 {% if topic.host.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                <!-- <img class="user-image" src="/static/images/avatar.png" alt="logo"> -->
+                <img class="user-image" src="{% static 'images/avatar.png' %}" alt="logo">
                 {% else %}
                 <img class="user-image" src="{{ topic.host.avatar.url }}" alt="user-image">
                 {% endif %}
