--- a/slackbook_user/templates/base/chat.html
+++ b/slackbook_user/templates/base/chat.html
@@ -14,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'images/avatar.png' %}">
+    <link rel="stylesheet" href="{% static 'images/SlackBook-Logo.png' %}">
     <title>chat</title>
 </head>
 
@@ -25,7 +27,8 @@
             <div class="main-content">
                 <div class="channel-content">
                 {% if 'chat' in request.path %}
-                <a class="navbar-brand" href="/"><img class="brand" src="/static/images/SlackBook-Logo.png" alt="logo"></a>
+                <!-- <a class="navbar-brand" href="/"><img class="brand" src="/static/images/SlackBook-Logo.png" alt="logo"></a> -->
+                <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}" alt="logo"></a>
                 <label for="channel-description">Conversation with
                     {% if request.user == chat.host %}
                         {{ chat.title }}
@@ -34,7 +37,6 @@
                     {% endif %}:
                 </label>
                 <br>
-                <!-- {{ chat.body }} --> 
                 connected since {{ chat.created_on|timesince }}
                 <hr>
                 {% endif %}
@@ -42,19 +44,14 @@
                 {% if post.chat %}
                     <div>
                         <small><a href="{% url 'account' request.user.id %}">@{{ post.user.username }}</a> - {{ post.created_on|timesince }} ago</small>
-                        <!-- <p>Comment: {{ post.body }}</p>
-                        <br> -->
                         {% if post.image %}
                             <img class="post-image" src="{{ post.image.url }}" alt="post-image">
                         {% else %}
                             <p class="question">{{ post.body }}</p>
-                            <!-- <p class="answer">{{ post.body }}</p> -->
                         {% endif %}
                         {% if request.user == post.user%}
-                            <!-- {{ post.id }} -->
                             <a href="{% url 'delete-comment' post.id %}"><button
                                 class="btn btn-outline-success button delete-post">X</button></a>
-                            <!-- <a  href="{% url 'delete-comment' post.id %}"><button class="btn btn-outline-success button">x</button></a> -->
                         {% endif %}
                         <hr>  
                     </div>
