--- a/templates/base-nav.html
+++ b/templates/base-nav.html
@@ -19,6 +19,8 @@
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'images/avatar.png' %}">
+    <link rel="stylesheet" href="{% static 'images/SlackBook-Logo.png' %}">
     <title>SlackBook</title>
 </head>
 <!--------------------------------- Body -->
@@ -28,8 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="row header no-gutters">
             <div class="col-md-4">
-                <a class="navbar-brand" href="/"><img class="brand" src="/static/images/SlackBook-Logo.png"
-                        alt="logo"></a>
+                <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -45,9 +46,11 @@
                             {{ request.user.username }}
                             {% endif %}
                             {% if request.user.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                            <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                            <!-- <img class="user-image" src="/static/images/avatar.png" alt="logo"> -->
+                            <img class="user-image" src="{% static 'images/avatar.png' %}" alt="logo">
                             {% elif not user.is_authenticated %}
-                            <img class="user-image" src="/static/images/avatar.png" alt="logo">
+                            <!-- <img class="user-image" src="/static/images/avatar.png" alt="logo"> -->
+                            <img class="user-image" src="{% static 'images/avatar.png' %}" alt="logo">
                             {% else %}
                             <img class="user-image" src="{{ request.user.avatar.url }}" alt="user-image">
                             {% endif %}
