add discription for all pages to readme

--- a/slackbook_user/templates/base/recently-active.html
+++ b/slackbook_user/templates/base/recently-active.html
@@ -11,8 +11,7 @@
                         <div class="channel-content">
                             <small><a href="{% url 'account' user.id %}">@{{ user.username }}</a></small>
                             {% if user.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                                <!-- <img class="user-image" src="/static/images/avatar.png" alt="logo"> -->
-                                <img class="user-image" src="{% static 'images/avatar.png' %}" alt="logo">
+                                <img class="user-image" src="/static/images/avatar.png" alt="logo">
                             {% else %}
                                 <img class="user-image" src="{{ user.avatar.url }}" alt="user-image">
                             {% endif %}
