--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="row header no-gutters">
             <div class="col-md-4">
+                <!-- <a class="navbar-brand" href="/"><img class="brand" src="/static/images/SlackBook-Logo.png" alt="logo"></a> -->
                 <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -48,11 +49,9 @@
                             {{ request.user.username }}
                             {% endif %}
                             {% if request.user.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                            <!-- <img class="user-image" src="/static/images/avatar.png" alt="logo"> -->
-                            <img class="user-image" src="{% static 'images/avatar.png' %}" alt="logo">
+                            <i class="far fa-user user-image default-user"></i>
                             {% elif not user.is_authenticated %}
-                            <!-- <img class="user-image" src="/static/images/avatar.png" alt="logo"> -->
-                            <img class="user-image" src="{% static 'images/avatar.png' %}" alt="logo">
+                            <i class="far fa-user user-image default-user"></i>
                             {% else %}
                             <img class="user-image" src="{{ request.user.avatar.url }}" alt="user-image">
                             {% endif %}
