--- a/static/css/style.css
+++ b/static/css/style.css
@@ -338,6 +338,16 @@ footer{
     .btn {
         margin: 0px auto !important;
     }
+
+    footer {
+        padding-top: 15px;
+      }
+
+    .footer a {
+        font-size: 20px;
+        display: contents;
+    }
+
 }
 
 @media (max-width: 567px) {
