--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -10,7 +10,7 @@
       <div class="col-4 main-channel-content">
   
         <div class="channel-content">
-            <h1>{% trans "Sign Out" %}</h1>
+            <h1>{% trans "Log Out" %}</h1>
 
             <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
